tests/ui/hygiene/cross-crate-glob-hygiene.stderr
error[E0422]: cannot find struct, variant or union type `MyStruct` in this scope
  --> $DIR/auxiliary/use_by_macro.rs:10:13
   |
LL | /     macro_rules! $macro_name {
LL | |         (define) => {
LL | |             pub struct MyStruct;
LL | |         };
LL | |         (create) => {
LL | |             MyStruct {}
   | |             ^^^^^^^^ not found in this scope
LL | |         };
LL | |     }
   | |_____- in this expansion of `my_struct!`
   |
  ::: $DIR/cross-crate-glob-hygiene.rs:21:13
   |
LL |       let x = my_struct!(create);
   |               ------------------ in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
